--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -11,6 +11,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="2"
             android:textColor="#fff"
+            android:textSize="18sp"
             />
 
     <TextView
@@ -20,6 +21,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:gravity="center"
+            android:textSize="18sp"
             android:textColor="#fff"/>
 
     <TextView
@@ -29,6 +31,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="end"
+            android:textSize="18sp"
             android:textColor="#fff"/>
 
     <TextView
@@ -38,5 +41,6 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:gravity="end"
+            android:textSize="18sp"
             android:textColor="#fff"/>
 </LinearLayout>
